fix overflow in dnd draft section

--- a/app/(admin)/admin/draft/page.module.scss
+++ b/app/(admin)/admin/draft/page.module.scss
@@ -1,5 +1,5 @@
 .draft {
-    max-width: unset;
+    max-width: unset !important;
 
     @media screen and (max-width: 548px) {
         display: none;
